bridge/base/0-militaryrecruitmentplatform-namespace.yaml
#! 0-militaryrecruitmentplatform-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: militaryrecruitmentplatform
    labels:
        com.docker.compose.project: militaryrecruitmentplatform
