bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: militaryrecruitmentplatform
    labels:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: militaryrecruitmentplatform
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: militaryrecruitmentplatform
                com.docker.compose.service: backend
                com.docker.compose.network.military-network: "true"
        spec:
            containers:
                - name: military-backend
                  image: militaryrecruitmentplatform-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-8081
                      containerPort: 8081
