bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: militaryrecruitmentplatform
    labels:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: militaryrecruitmentplatform
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: militaryrecruitmentplatform
                com.docker.compose.service: frontend
                com.docker.compose.network.military-network: "true"
        spec:
            containers:
                - name: military-frontend
                  image: militaryrecruitmentplatform-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
                    - name: frontend-80
                      containerPort: 80
