bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: militaryrecruitmentplatform
    labels:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: backend
    ports:
        - name: backend-8081
          port: 8081
          targetPort: backend-8081
