bridge/base/backend-service.yaml
# check if there is at least one published port

#! backend-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend-published
    namespace: militaryrecruitmentplatform
    labels:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: militaryrecruitmentplatform
        com.docker.compose.service: backend
    ports:
        - name: backend-8081
          port: 8081
          protocol: TCP
          targetPort: backend-8081

# check if there is at least one published port
