bridge/base/military-network-network-policy.yaml
#! military-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: military-network-network-policy
    namespace: militaryrecruitmentplatform
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.military-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.military-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.military-network: "true"
